@@ -1,10 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 apply plugin: 'war'
 
 group = 'com.r2r'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 description = """road2ring"""
 
@@ -13,7 +13,7 @@ targetCompatibility = 1.8
 
 buildscript {
 	ext {
-		springBootVersion = '2.1.0.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -23,7 +23,10 @@ buildscript {
 	}
 }
 
-
+bootRun {
+	jvmArgs = ["-XX:PermSize=256m", "-XX:MaxPermSize=512m", "-Xmx2048m", "-Dserver.port=8081"]
+	addResources = true
+}
 
 repositories {
 	mavenCentral()
@@ -34,12 +37,13 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.4.0.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version:'1.5.1.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.0.RELEASE'
-	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
+//	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
 	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version:'1.9.21'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'1.4.0.RELEASE'
 	compile group: 'org.hibernate', name: 'hibernate-core', version:'5.0.4.Final'
 	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.0.7.RELEASE'
 	compile group: 'com.github.darrachequesne', name: 'spring-data-jpa-datatables', version:'1.2'
+	compile 'com.github.mkopylec:recaptcha-spring-boot-starter:1.3.10'
 
 	compile('org.projectlombok:lombok:1.16.10')
 
